--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,10 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "angular": "~1.4.5",
+    "angular-route": "~1.4.5",
+    "d3": "~3.5.6",
+    "materialize": "~0.97.0"
   }
 }
