--- a/node/package.json
+++ b/node/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "cheerio": "^0.19.0",
     "q": "^1.4.1",
-    "request": "^2.62.0"
+    "request": "^2.62.0",
+    "sanitize-filename": "^1.4.4"
   },
   "devDependencies": {},
   "scripts": {
