--- a/node/package.json
+++ b/node/package.json
@@ -5,6 +5,7 @@
   "main": "req.js",
   "dependencies": {
     "cheerio": "^0.19.0",
+    "line-by-line": "^0.1.4",
     "q": "^1.4.1",
     "request": "^2.62.0",
     "sanitize-filename": "^1.4.4"
